# UniswapV3Multicall

./: .env  Cargo.toml  PoolData.txt  README.md
abi/: uniswap_pool.json
src/: constants.rs  main.rs  multicall.rs  types.rs  utils.rs
src/calls/: mod.rs  multicall.rs  pool_calls.rs  tokens_calls.rs
